--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "vite": "^7.3.1"
+  },
+  "license": "ISC"
 }
