--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +10,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "vite": "^7.3.1"
-  },
-  "license": "ISC"
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^4.3.1"
+  }
 }
