--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
-  "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-  "start": "npm run start --prefix backend"
-},
-
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devendrasinghpanwar/AgainChatify-.git"
@@ -20,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/devendrasinghpanwar/AgainChatify-/issues"
   },
-  "homepage": "https://github.com/devendrasinghpanwar/AgainChatify-#readme"
+  "homepage": "https://github.com/devendrasinghpanwar/AgainChatify-#readme",
+  "dependencies": {
+    "cloudinary": "^2.9.0"
+  }
 }
