--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@vitejs/plugin-react": "^4.3.1",
+    "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.13.0",
     "vite": "^7.3.1",
-    "@vitejs/plugin-react": "^4.3.1"
+    "zustand": "^5.0.11"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "daisyui": "^5.5.16",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
