--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.13.4",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.13.0",
     "vite": "^7.3.1",
     "zustand": "^5.0.11"
